--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,9 @@ disqus_shortname:   default
 
 # Social
 analytics-id:       "default"
-twitter:            default
+twitter:            sab1e7e
 facebook:           default
-instagram:          default
-github:             default
+instagram:          sab1e7e
 
 # personal
 location:           Los Angeles, CA
